kubernetes/flask-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  myapp
  namespace: default
  labels:
    app:  myapp
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  myapp
    spec:
      containers:
      - name:  myapp
        image:  kubefan/myapp:latest
        ports:
        - containerPort:  5000
