kubernetes/flask-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myappingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /jokes
        pathType: Prefix
        backend:
          service:
            name: myapp
            port:
              number: 80
